--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst3.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst3.vcxproj.filters
@@ -153,7 +153,7 @@
     <ClInclude Include="..\..\..\IPlug\IPlugMidi.h">
       <Filter>IPlug</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IPlugOSDetect.h">
+    <ClInclude Include="..\..\..\IPlug\IPlugPlatform.h">
       <Filter>IPlug</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\IPlug\IPlugParameter.h">
