--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-app.vcxproj.filters
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-app.vcxproj.filters
@@ -35,9 +35,6 @@
     <ClCompile Include="..\..\..\IPlug\rtaudiomidi\RtMidi.cpp">
       <Filter>IPlug\APP\RTAudioMidi</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp">
-      <Filter>IGraphics</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IGraphics\IGraphicsNanoVG.cpp">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClCompile>
@@ -67,6 +64,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\IPlug\IPlugAPP.cpp">
       <Filter>IPlug\APP</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\IPlug\IPlugBaseGraphics.cpp">
+      <Filter>IPlug</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -153,9 +153,6 @@
     <ClInclude Include="..\..\..\IPlug\IGraphics\IPopupMenu.h">
       <Filter>IGraphics</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IGraphics\IPlugBaseGraphics.h">
-      <Filter>IGraphics</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\IPlug\IGraphics\IGraphicsNanoVG.h">
       <Filter>IGraphics\DrawClasses</Filter>
     </ClInclude>
@@ -203,6 +200,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\IPlug\IPlugAPP.h">
       <Filter>IPlug\APP</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\IPlug\IPlugBaseGraphics.h">
+      <Filter>IPlug</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
