--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj
@@ -320,9 +320,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Tracer|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="..\..\..\IPlug\IGraphics\IPlugBaseGraphics.h" />
     <ClInclude Include="..\..\..\IPlug\IGraphics\IPopupMenu.h" />
     <ClInclude Include="..\..\..\IPlug\IPlugBase.h" />
+    <ClInclude Include="..\..\..\IPlug\IPlugBaseGraphics.h" />
     <ClInclude Include="..\..\..\IPlug\IPlugConstants.h" />
     <ClInclude Include="..\..\..\IPlug\IPlugLogger.h" />
     <ClInclude Include="..\..\..\IPlug\IPlugMidi.h" />
@@ -405,8 +405,8 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\..\IPlug\IGraphics\IPlugBaseGraphics.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugBase.cpp" />
+    <ClCompile Include="..\..\..\IPlug\IPlugBaseGraphics.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugParameter.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugVST.cpp" />
     <ClCompile Include="..\IPlugEffect.cpp" />
