--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,6 @@ deploy:
   github_token: $GITHUB_API_KEY
   on:
     branch: iplugquake
+
+notifications:
+    slack: iplug-users:KYWqbMwCVOSH3CiATEXg6stM
