in theory, fix win32 SVG load, but need to get SVG String from resource and nsvgloadfromstring

--- a/common.props
+++ b/common.props
@@ -60,6 +60,9 @@
     <Lib>
       <AdditionalDependencies />
     </Lib>
+    <ResourceCompile>
+      <AdditionalIncludeDirectories>$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <BuildMacro Include="WDL_PATH">
