VST3 UNICODE_OFF & test controls
https://sdk.steinberg.net/viewtopic.php?f=4&t=355

--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect.props
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect.props
@@ -6,10 +6,10 @@
   <PropertyGroup Label="UserMacros">
     <BINARY_NAME>IPlugEffect</BINARY_NAME>
     <AAX_BUNDLE>$(SolutionDir)build-win\aax\bin\$(BINARY_NAME).aaxplugin</AAX_BUNDLE>
+    <EXTRA_ALL_DEFS>IGRAPHICS_LICE</EXTRA_ALL_DEFS>
     <EXTRA_DEBUG_DEFS />
     <EXTRA_RELEASE_DEFS />
     <EXTRA_TRACER_DEFS />
-    <EXTRA_ALL_DEFS>IGRAPHICS_CAIRO</EXTRA_ALL_DEFS>
   </PropertyGroup>
   <PropertyGroup>
     <TargetName>$(BINARY_NAME)</TargetName>
@@ -39,6 +39,9 @@
     <BuildMacro Include="AAX_BUNDLE">
       <Value>$(AAX_BUNDLE)</Value>
     </BuildMacro>
+    <BuildMacro Include="EXTRA_ALL_DEFS">
+      <Value>$(EXTRA_ALL_DEFS)</Value>
+    </BuildMacro>
     <BuildMacro Include="EXTRA_DEBUG_DEFS">
       <Value>$(EXTRA_DEBUG_DEFS)</Value>
     </BuildMacro>
@@ -47,9 +50,6 @@
     </BuildMacro>
     <BuildMacro Include="EXTRA_TRACER_DEFS">
       <Value>$(EXTRA_TRACER_DEFS)</Value>
-    </BuildMacro>
-    <BuildMacro Include="EXTRA_ALL_DEFS">
-      <Value>$(EXTRA_ALL_DEFS)</Value>
     </BuildMacro>
   </ItemGroup>
 </Project>
