--- a/common.xcconfig
+++ b/common.xcconfig
@@ -25,7 +25,7 @@ SHARED_PRECOMPS_DIR = $(TARGET_BUILD_DIR)/PCH
 // macros for all debug/release/tracer builds
 DEBUG_DEFS = DEVELOPMENT=1 DEBUG=1 _DEBUG
 RELEASE_DEFS = RELEASE=1 NDEBUG=1
-TRACER_DEFS = $RELEASE_DEFS TRACER_BUILD
+TRACER_DEFS = $DEBUG_DEFS TRACER_BUILD // here you can change if a TRACER build is a DEBUG or RELEASE build
 
 // macros for individual plug-in format builds etc
 ALL_DEFS = NOMINMAX
