--- a/IPlugExamples/IPlugEffect/resources/IPlugEffect-macOS-AUv3-Info.plist
+++ b/IPlugExamples/IPlugEffect/resources/IPlugEffect-macOS-AUv3-Info.plist
@@ -52,7 +52,7 @@
 			</array>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
-		<string>com.apple.AudioUnit</string>
+		<string>com.apple.AudioUnit-UI</string>
 		<key>NSExtensionPrincipalClass</key>
 		<string>IPlugViewController</string>
 	</dict>
