--- a/common.xcconfig
+++ b/common.xcconfig
@@ -29,11 +29,12 @@ TRACER_DEFS = $DEBUG_DEFS TRACER_BUILD // here you can change if a TRACER build 
 
 // macros for individual plug-in format builds etc
 ALL_DEFS = NOMINMAX
-VST2_DEFS = VST_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
-VST3_DEFS = VST3_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
-AU_DEFS = AU_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
-AUv3_DEFS = AUv3_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
-AAX_DEFS = AAX_API SWELL_JUST_FOR_THREADING SWELL_CLEANUP_ON_UNLOAD
+PLUGIN_DEFS = SWELL_CLEANUP_ON_UNLOAD // macros for all plug-in builds
+VST2_DEFS = VST_API $PLUGIN_DEFS
+VST3_DEFS = VST3_API $PLUGIN_DEFS
+AU_DEFS = AU_API $PLUGIN_DEFS
+AUv3_DEFS = AUv3_API $PLUGIN_DEFS
+AAX_DEFS = AAX_API $PLUGIN_DEFS
 APP_DEFS = APP_API __MACOSX_CORE__
 
 // Where the SDKs etc. are located in relation to the plug-in Xcode project
