--- a/IPlugExamples/IPlugEffect/projects/IPlugEffect.xcconfig
+++ b/IPlugExamples/IPlugEffect/projects/IPlugEffect.xcconfig
@@ -6,15 +6,11 @@
 // the basename of the vst, vst3, app, component, aaxplugin
 BINARY_NAME = IPlugEffect
 
-
-
 // ------------------------------
 // HEADER AND LIBRARY SEARCH PATHS
 EXTRA_INC_PATHS = $(IGRAPHICS_INC_PATHS)
 EXTRA_LIB_PATHS = $(IGRAPHICS_LIB_PATHS)
 EXTRA_LNK_FLAGS = $(IGRAPHICS_LNK_FLAGS)
-
-
 
 
 //------------------------------
@@ -24,8 +20,6 @@ EXTRA_ALL_DEFS = OBJC_PREFIX=vIPlugEffect SWELL_APP_PREFIX=Swell_vIPlugEffect GR
 //EXTRA_DEBUG_DEFS =
 //EXTRA_RELEASE_DEFS =
 //EXTRA_TRACER_DEFS =
-
-
 
 //------------------------------
 // RELEASE BUILD OPTIONS
@@ -37,17 +31,15 @@ PROFILE = NO //NO, YES - enable this if you want to use instruments to profile a
 // None: [-O0] Fast: [-O, -O1] Faster:[-O2] Fastest: [-O3] Fastest, smallest: Optimize for size. [-Os]
 RELEASE_OPTIMIZE = 3 //0,1,2,3,s
 
-
-
 //------------------------------
 // DEBUG BUILD OPTIONS
 DEBUG_OPTIMIZE = 0 //0,1,2,3,s
 
-
-
 //------------------------------
 // MISCELLANEOUS COMPILER OPTIONS
 
+//ARCHS = $(ARCHS_STANDARD_32_64_BIT)
+ARCHS = $(ARCHS_STANDARD_64_BIT)
 
 GCC_INCREASE_PRECOMPILED_HEADER_SHARING = NO
 
